--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Playing the Bad News Game
-description: Prebunking Misinformation Practices in the Classroom with Gamification
+description: Miles C. Coleman
 github:
   is_project_page: false
