--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-cayman
 title: Playing the Bad News Game
-description: Miles C. Coleman
+description: Prebunking Misinformation Practices in the Classroom with Gamification
+author: Miles C. Coleman
 github:
   is_project_page: false
